# wasm-gg-build

./: Cargo.toml  README.md  reinstall.sh
cargo-lock/: Cargo.toml
cargo-lock/data/: Cargo.lock.example
cargo-lock/src/: lib.rs
cargo-toml/: Cargo.toml
cargo-toml/src/: lib.rs
wargo/: Cargo.toml
wargo/src/: main.rs
wargo/src/init/: cargo_toml.append  lib.rs.template  mod.rs  simple_box.rs.template
wrg-build/: Cargo.toml
wrg-build/src/: main.rs
